# quizzy

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
accounts/: backends.py  forms.py  urls.py  views.py
accounts/migrations/: 0001_email_unique_index.py
accounts/tests/: test_backends.py  test_profile_and_auth.py
api/: permissions.py  serializers.py  tests.py  urls.py  views.py
assets/css/: input.css
assets/scss/: _variables.scss  theme.scss
core/: channels.py  context_processors.py  middleware.py  views.py
core/templatetags/: ui.py
core/tests/: test_context_processor.py  test_middleware.py
observability/: prometheus.yml
quiz_project/: asgi.py  metrics.py  routing.py  settings.py  stats.py  storage.py  urls.py
quizzes/: admin.py  forms.py  models.py  services.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_invitation_declined.py  0003_quiz_scoring_choices.py
quizzes/tests/: test_invitations.py  test_views.py
realtime/: consumers.py  utils.py
static/css/: app.css  tailwind.css
static/js/: enhancements.js  nav.js  theme.js
submissions/: apps.py  models.py  services.py  signals.py  strategies.py
submissions/migrations/: 0001_initial.py
submissions/tests/: test_remaining_attempts.py  test_scoring.py
templates/: 400.html  403.html  404.html  500.html  base.html  home.html
templates/accounts/: profile_edit.html
templates/partials/: alerts.html  buttons.html  footer.html  navbar.html
(+24 files in other folders)
